--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,10 @@ slab = "0.4"
 [[example]]
 name = "example"
 
+[[bench]]
+name = "parser"
+harness = false
+
 [profile.release]
 opt-level = 3
 debug = true
@@ -32,3 +36,6 @@ debug-assertions = false
 [profile.dev]
 debug = true
 opt-level = 0
+
+[dev-dependencies]
+criterion = "0.4.0"
