--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,22 @@ name = "example_client"
 name = "parser"
 harness = false
 
+[[bench]]
+name = "parse_method"
+harness = false
+
+[[bench]]
+name = "parse_target"
+harness = false
+
+[[bench]]
+name = "parse_headers"
+harness = false
+
+[[bench]]
+name = "parser_iai"
+harness = false
+
 [profile.release]
 opt-level = 3
 debug = true
@@ -43,4 +59,5 @@ debug = true
 opt-level = 0
 
 [dev-dependencies]
-criterion = "0.4.0"
+criterion = { version = "0.4.0", features = ["html_reports"] }
+iai = "0.1"
