--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,11 +33,11 @@ name = "parse_target"
 harness = false
 
 [[bench]]
-name = "parse_headers"
+name = "parse_version"
 harness = false
 
 [[bench]]
-name = "parser_iai"
+name = "parse_headers"
 harness = false
 
 [profile.release]
@@ -60,4 +60,3 @@ opt-level = 0
 
 [dev-dependencies]
 criterion = { version = "0.4.0", features = ["html_reports"] }
-iai = "0.1"
