--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,25 +1,16 @@
-name: CI
-on: [push, pull_request]
-
 env:
   CARGO_TERM_COLOR: always
-
 jobs:
   build:
     runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: ["ubuntu-latest", "macos-latest", "windows-latest"]
-        version: ["stable", "nightly", "1.57.0"]
-
     steps:
       - uses: actions/checkout@v3
       - uses: actions-rs/toolchain@v1
         with:
+          components: rustfmt, clippy
+          override: true
           profile: minimal
           toolchain: ${{ matrix.version }}
-          override: true
-          components: rustfmt, clippy
 
       - uses: actions-rs/cargo@v1
         with:
@@ -31,10 +22,18 @@ jobs:
 
       - uses: actions-rs/cargo@v1
         with:
-          command: fmt
           args: --all -- --check
+          command: fmt
 
       - uses: actions-rs/cargo@v1
         with:
-          command: clippy
           args: -- -D warnings
+          command: clippy
+
+    strategy:
+      matrix:
+        os: ["ubuntu-latest", "macos-latest", "windows-latest"]
+        version: ["nightly"]
+
+name: CI
+on: [push, pull_request]
