--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,11 @@ categories = ["web-programming::http-server"]
 [dependencies]
 crossbeam-channel = "0.5.7"
 mio = { version = "0.8", features = ["os-poll", "net"] }
-rustls = "0.20.8"
+rustls = { version = "0.21", features = ["quic"] }
 slab = "0.4"
+
+[dev-dependencies]
+criterion = { version = "0.4.0", features = ["html_reports"] }
 
 # [[example]]
 # name = "example"
@@ -58,6 +61,3 @@ debug-assertions = false
 [profile.dev]
 debug = true
 opt-level = 0
-
-[dev-dependencies]
-criterion = { version = "0.4.0", features = ["html_reports"] }
