--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,12 +10,15 @@ keywords = ["HTTP", "Server", "Proxy", "H2", "H3"]
 categories = ["web-programming::http-server"]
 
 [dependencies]
+io-uring = "0.6.0"
+libc = "0.2.146"
 mio = { version = "0.8", features = ["os-poll", "net"] }
 rustls = { version = "0.21", features = ["quic"] }
 slab = "0.4"
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports"] }
+fake = "2.6.1"
 
 # [[example]]
 # name = "example"
